# Sudoku

./: CMakeLists.txt  Sudoku.cpp  Sudoku.h  main.cpp
DTOs/: Coordinates.cpp  Coordinates.h  MethodSolutionDto.h  SolutionResultDto.h
Extensions/: FileExtension.cpp  FileExtension.h  HelperFunctionsExtension.cpp  HelperFunctionsExtension.h  MethodsExtension.cpp  MethodsExtension.h  SolverExtension.cpp  SolverExtension.h  SolverHelperExtension.cpp  SolverHelperExtension.h
Objects/Abstractions/: BaseObject.cpp  BaseObject.h
Objects/Board/: Board.cpp  Board.h
Objects/Boxes/: BoxObject.cpp  BoxObject.h  BoxTextures.cpp  BoxTextures.h
Objects/Candidates/: CandidateBox.cpp  CandidateBox.h  CandidateBoxTextures.cpp  CandidateBoxTextures.h
Objects/LoadButton/: LoadButton.cpp  LoadButton.h
Objects/Logo/: Logo.cpp  Logo.h
Objects/MethodObjects/: DownButton.cpp  DownButton.h  ListMethodButton.cpp  ListMethodButton.h  MethodButton.cpp  MethodButton.h  MethodButtonTextures.cpp  MethodButtonTextures.h  MethodText.cpp  MethodText.h  ShowCandidatesCheckBox.cpp  ShowCandidatesCheckBox.h  UpButton.cpp  UpButton.h
Objects/ResetButton/: ResetButton.cpp  ResetButton.h
Objects/SaveButton/: SaveButton.cpp  SaveButton.h
Objects/ShowCandidatesCheckBox/: ShowCandidatesCheckBox.cpp  ShowCandidatesCheckBox.h
Objects/SolveButton/: SolveButton.cpp  SolveButton.h
Shared/: CustomColors.cpp
Shared/Enums/: BoardStructureType.h  MethodType.h  SolutionResultType.h  StructureType.h
Shared/Static/: CustomColors.h  EnumsToStrings.cpp  EnumsToStrings.h  WindowVariables.cpp  WindowVariables.h
